<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_bookmarks"
        android:icon="@drawable/ic_action_name"
        android:title="@string/menu_bookmarks" />
    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search"
        android:title="@string/menu_search" />
    <item
        android:id="@+id/menu_maps"
        android:icon="@drawable/ic_location_on"
        android:title="@string/menu_maps" />
    <item
        android:id="@+id/menu_dashboard"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/menu_dashboards" />
    <!--
    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/menu_settings" />
        -->
    <item
        android:id="@+id/menu_signup"
        android:icon="@drawable/ic_person_add_24dp"
        android:title="@string/action_sign_up" />
    <item
        android:id="@+id/menu_profile"
        android:icon="@drawable/ic_info_outline"
        android:title="@string/menu_profile" />
    <item
        android:id="@+id/menu_signin"
        android:icon="@drawable/ic_account_circle"
        android:title="@string/action_sign_in" />
    <item
        android:id="@+id/menu_logout"
        android:icon="@drawable/ic_exit_to_app"
        android:title="@string/action_logout" />
</menu>