<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="50dp"
	    android:layout_gravity="center"
	    android:orientation="horizontal"
	    android:background="@color/splash_background" >
	
		<TextView
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center"
		    android:gravity="center"
		    android:textColor="#ffffff"
		    android:textSize="18sp"
		    android:text="@string/app_name" />
	</LinearLayout>

	<View
	    android:layout_width="fill_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1" />

	<LinearLayout
	    android:id="@+id/locality_selection_btn_uf"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:background="@drawable/roundborder"
		android:gravity="center"
		android:layout_marginRight="20dp"
	    android:layout_marginLeft="20dp"
	    android:layout_marginBottom="30dp"
	    android:clickable="true"
		android:orientation="horizontal" >
		
		<EditText
		    android:id="@+id/locality_selection_edt_uf"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:background="@drawable/noborder"
			android:hint="@string/estado"
			android:padding="8dp"
            android:focusable="false"  
			android:inputType="none"
			android:singleLine="true" />
		
		<ImageView
			android:layout_width="20dp"
			android:layout_height="20dp"
			android:padding="3dp"
			android:layout_marginRight="3dp"
			android:contentDescription="@string/estado"
			android:src="@drawable/btn_seta" />
	</LinearLayout>

	<LinearLayout
	    android:id="@+id/locality_selection_btn_cidade"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:background="@drawable/roundborder"
		android:gravity="center"
		android:layout_marginRight="20dp"
	    android:layout_marginLeft="20dp"
	    android:layout_marginBottom="30dp" 
	    android:clickable="true"
		android:orientation="horizontal" >
		
		<EditText
		    android:id="@+id/locality_selection_edt_cidade"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:background="@drawable/noborder"
			android:hint="@string/cidade"
			android:padding="8dp"
            android:focusable="false"  
			android:inputType="none"
			android:singleLine="true" />
		
		<ImageView
			android:layout_width="20dp"
			android:layout_height="20dp"
			android:padding="3dp"
			android:layout_marginRight="3dp"
			android:contentDescription="@string/cidade"
			android:src="@drawable/btn_seta" />
	</LinearLayout>

	<Button
	    android:id="@+id/locality_selection_btn_meu_local"
	    android:layout_width="match_parent"
	    android:layout_height="45dp"
	    android:text="@string/action_select"
	    android:textColor="#ffffff"
		android:textSize="16sp"
	    android:layout_marginRight="20dp"
	    android:layout_marginLeft="20dp"
	    android:layout_marginBottom="10dp"
	    android:background="@color/splash_background" />
	
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:orientation="horizontal" >
		
	    <View 
	        android:layout_width="0dp"
			android:layout_height="1dp"
			android:layout_weight="1"/>
		
		<ImageView
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:scaleType="fitCenter"
			android:layout_gravity="center_vertical"
			android:adjustViewBounds="true"
			android:contentDescription="@string/app_name"
			android:src="@drawable/mobisaude_logo" />
	
	    <View 
	        android:layout_width="0dp"
			android:layout_height="1dp"
			android:layout_weight="1"/>
		
	</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal|center_vertical">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
			android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"/>

    </LinearLayout>

</LinearLayout>